equivalent distance for RGHJs are corrected

--- a/ms.tex
+++ b/ms.tex
@@ -393,7 +393,7 @@ P_{\rm k,\,inp}
 \end{eqnarray}
 %%%
 \memoYF{what is the typical wind velocity of AGB stars?}
-Therefore, the jupiters to the AGB stars are intrinsically 50 times as bright as typical hot Jupiters. In other words, we could search for radio signal from these stars in $50^3 = 125000$ times as large volume as the canonical hot jupiters.  
+Therefore, the jupiters to the AGB stars are intrinsically 50 times as bright as typical hot Jupiters. In other words, we could search for radio signal from these stars in $(\sqrt{50})^3 = 353$ times as large volume as the canonical hot jupiters.  
 
 
 Therefore, 
