Radius is assumed to be constant

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,10 +2,29 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-04-16 22:30:56 +0900 
+%% Created for Yuka Fujii at 2015-04-22 13:16:45 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
+
+
+@article{fortney2007,
+	Abstract = {To aid in the physical interpretation of planetary radii constrained through observations of transiting planets, or eventually direct detections, we compute model radii of pure hydrogen-helium, water, rock, and iron planets, along with various mixtures. Masses ranging from 0.01 Earth masses to 10 Jupiter masses at orbital distances of 0.02 to 10 AU are considered. For hydrogen-helium rich planets, our models are the first to couple planetary evolution to stellar irradiation over a wide range of orbital separations (0.02 to 10 AU) through a non-gray radiative-convective equilibrium atmosphere model. Stellar irradiation retards the contraction of giant planets, but its effect is not a simple function of the irradiation level: a planet at 1 AU contracts as slowly as a planet at 0.1 AU. For hydrogen-helium planets, we consider cores up to 90\% of the total planet mass, comparable to those of Uranus and Neptune. If "hot Neptunes" have maintained their original masses and are not remnants of more massive planets, radii of 0.30-0.45 times Jupiter's radius are expected. Water planets are ~40-50\% larger than rocky planets, independent of mass. Finally, we provide tables of planetary radii at various ages and compositions, and for ice-rock-iron planets we fit our results to analytic functions, which will allow for quick composition estimates, given masses and radii, or mass estimates, given only planetary radii. These results will assist in the interpretation of observations for both the current transiting planet surveys as well as upcoming space missions, including CoRoT and Kepler.},
+	Adsnote = {Provided by Yuka FUjii},
+	Adsurl = {},
+	Archiveprefix = {arXiv},
+	Author = {{Fortney}, F.~J. and {Marley}, M.~S. and {Barnes}, J.~W.},
+	Eprint = {0612671},
+	Journal = {\apj},
+	Keywords = {},
+	Month = apr,
+	Pages = {1661-1672},
+	Primaryclass = {astro-ph.EP},
+	Title = {{Planetary Radii across Five Orders of Magnitude in Mass and Stellar Insolation: Application to Transits}},
+	Volume = 659,
+	Year = 2007,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/791/1/25}}
+
 
 
 
@@ -15196,7 +15215,7 @@ Appendices A and B are only available in electronic form at http://www.aanda.org
 	Adsurl = {http://adsabs.harvard.edu/abs/2008PhDT.........6S},
 	Author = {{Spiegel}, D.~S.},
 	Keywords = {Exoplanets, Habitability, Astrobiology, Intergalactic medium},
-	Month = October,
+	Month = oct,
 	School = {Columbia University},
 	Title = {{On constraining nontrivial properties of exoplanets and other topics in astrophysics}},
 	Year = 2008}
@@ -15205,7 +15224,7 @@ Appendices A and B are only available in electronic form at http://www.aanda.org
 	Archiveprefix = {arXiv},
 	Author = {{Spiegel}, D.~S.},
 	Journal = {ArXiv e-prints},
-	Month = august,
+	Month = aug,
 	Title = {{Binary Evolution Leads to Two Populations of White Dwarf Companions}},
 	Year = 2012}
 
